Bring i18n to main.js

--- a/Open-ILS/xul/staff_client/chrome/locale/en-US/offline.properties
+++ b/Open-ILS/xul/staff_client/chrome/locale/en-US/offline.properties
@@ -11,6 +11,8 @@ common.barcode.status.warning.barred=Barred
 common.barcode.status.warning.blocked=Blocked
 common.barcode.status.warning.unknown=with an unknown code: %1$s
 common.date.invalid=Invalid Date
+common.no=No
+common.yes=Yes
 common.unimplemented=Not Yet Implemented
 cat.bib_record=Bib Record: %1$s
 cat.opac.delete_record.confirm=Are you sure you want to delete title record #%1$s from the catalog?
@@ -121,3 +123,24 @@ menu.close_all_tabs.error=Error closing all tabs
 menu.close_tab.update_tab_label=Tab %1$s
 menu.new_tab.tab=Tab %1$s
 menu.set_tab.error=pause for error
+main.testing=Testing
+main.transaction_export.title=Save Transaction File As
+main.transaction_export.prompt=Would you like to overwrite the existing file %1$s?
+main.transaction_export.prompt.title=Transaction Export Warning
+main.transaction_export.success.prompt=Your transactions have been successfully exported to file %1$s. We strongly recommend that you now purge the transactions from this staff client.  Would you like for us to do this?
+main.transaction_export.success.title=Transaction Export Successful
+main.transaction_export.filename.error=Error purging transactions:  Taking too long to find a unique filename for archival.
+main.transaction_export.duplicate.warning=Please note that you now have two sets of identical transactions.  Unless the set you just exported is solely for archival purposes, we run the risk of duplicate transactions being processed on the server.
+main.transaction_export.no_filename.error=Either you did not choose a filename, or you tried to overwrite an existing file.
+main.transaction_export.no_transactions.error=There are no outstanding transactions to export.
+main.transaction_import.outstanding.error=There are already outstanding transactions on this staff client.  Upload these first.
+main.transaction_import.title=Import Transaction File
+main.transaction_import.delete.prompt=Your transactions have been successfully migrated to this staff client.\n\nWe recommend that you delete the external copy.  Would you like for us to delete %1$s?
+main.transaction_import.success=Transaction Import Successful
+main.on_debug.clear_cache=cache cleared
+main.on_debug.debug=debug the debug :D
+main.about_btn.label=About this client...
+main.settings.migrate=This version of the staff client stores local settings in a different location than your previous installation.  Should we attempt to migrate these settings?
+main.settings.migrate.failed=WARNING: Unable to migrate legacy settings.  The settings and configuration files appear to exist in multiple locations. \nTo resolve this problem manually, please consider:\n\t%1$s\nwhich is in the directory where we want to store settings for the current operating system account, and:\n\t%2$s\nwhich is where we used to store such information.\n
+main.settings.migrate.confirm=Move the settings and configuration files from\n%1$s\nto\n%2$s?
+main.settings.migrate.error=Error trying to move %1$s to directory %2$s
