More i18n for chrome

--- a/Open-ILS/xul/staff_client/chrome/locale/en-US/offline.properties
+++ b/Open-ILS/xul/staff_client/chrome/locale/en-US/offline.properties
@@ -144,3 +144,10 @@ main.settings.migrate=This version of the staff client stores local settings in 
 main.settings.migrate.failed=WARNING: Unable to migrate legacy settings.  The settings and configuration files appear to exist in multiple locations. \nTo resolve this problem manually, please consider:\n\t%1$s\nwhich is in the directory where we want to store settings for the current operating system account, and:\n\t%2$s\nwhich is where we used to store such information.\n
 main.settings.migrate.confirm=Move the settings and configuration files from\n%1$s\nto\n%2$s?
 main.settings.migrate.error=Error trying to move %1$s to directory %2$s
+openils.global_util.clear_cache.error=Problem clearing the cache: %1$s
+openils.global_util.clipboard.error=Clipboard action failed: %1$s
+openils.global_util.clipboard=Copied "%1$s" to clipboard.
+openils.global_util.content_window_jsobject.error=Error with get_contentWindow(%1$s) and wrappedJSObject: %2$s
+openils.global_util.content_window.error=Error with get_contentWindow(%1$s): %2$s
+openils.global_util.font_size.error=Error adjusting the font size: %1$s
+
