--- a/Open-ILS/xul/staff_client/server/locale/en-US/admin.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/admin.properties
@@ -27,3 +27,14 @@ staff.admin.font_settings.status_msg.ALL_FONTS_16PT=Global Font set to 16pt
 staff.admin.font_settings.status_msg.ALL_FONTS_17PT=Global Font set to 17pt
 staff.admin.font_settings.status_msg.ALL_FONTS_18PT=Global Font set to 18pt
 staff.admin.font_settings.status_msg.ALL_FONTS_DEFAULT=Global Font Adjust set to Default
+staff.admin.transit_list.missing_list=Missing library list.
+staff.admin.transit_list.no_match=No matching transits.
+staff.admin.transit_list.invalid_date=Invalid Date (%1$s), setting to Today
+staff.admin.transit_list.invalid_date_format=Invalid Date (%1$s,%2$s), setting to Today
+staff.admin.transit_list.date_processing.error=error processing date
+staff.admin.transit_list.retrieving_transit.error=error retrieving transits
+staff.admin.transit_list.preretrieving_transit.error=error pre-retrieving transits
+staff.admin.transit_list.retrieving_row.error=error retrieving row
+staff.admin.transit_list.empty_array.error=Empty array returned by hold retrieve.
+staff.admin.transit_list.retrieve_hold.error=retrieving hold id = %1$s for transit id = %2$s
+staff.admin.transit_list.transit_id.error=retrieving transit id = %1$s
