--- a/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
@@ -60,6 +60,7 @@ staff.circ.checkout.permission_denied=Permission Denied = %1$s
 # "Circulation" - check &staff.main.menu.circ.label; in lang.dtd
 # "Offline Interface" - check &staff.main.menu.circ.offline.label; in lang.dtd
 staff.circ.checkout.suggest_offline=Check Out Failed.  If you wish to use the offline interface, in the top menubar select Circulation -> Offline Interface
+staff.circ.checkout.barcode=Barcode:
 staff.circ.circ_brief.staff_out_id=Check Out Staff ID = %1$s
 staff.circ.circ_brief.staff_in_id=Check In Staff ID = %1$s
 staff.circ.circ_brief.failure=Failure rendering circulation.
