Bring copy_status to the world of i18n

--- a/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
@@ -75,3 +75,60 @@ staff.circ.copy_details.not_transit=This item is not in transit.
 staff.circ.copy_details.user_details=%1$s, %2$s : %3$s
 staff.circ.copy_details.bad_hold_status=This item is not captured for a hold, however its status is incorrectly set to "On Holds Shelf".  Please check this item in to correct the status.
 staff.circ.copy_details.no_hold=This item is not captured for a hold.
+staff.circ.copy_status.action.complete=Action complete.
+staff.circ.copy_status.sel_checkin.error=Checkin did not likely happen.
+staff.circ.copy_status.cmd_replace_barcode.error=Barcode %1$s was not likely replaced.
+staff.circ.copy_status.cmd_replace_barcodes.error=Barcode replacements did not likely happen.
+staff.circ.copy_status.sel_edit.error=with copy editor
+staff.circ.copy_status.sel_renew.not_circulating=Item with barcode %1$s is not circulating.
+staff.circ.copy_status.upload_file.title=Import Barcode File
+staff.circ.copy_status.upload_file.complete=File uploaded.
+staff.circ.copy_status.upload_file.no_barcodes=No barcodes found in file.
+staff.circ.copy_status.add_items.title=Add Item for record # %1$s
+staff.circ.copy_status.del_items.confirm=Are you sure sure you want to delete these items? %1$s
+staff.circ.copy_status.del_items.title=Override Delete Failure?
+staff.circ.copy_status.del_items.success=Items Deleted
+staff.circ.copy_status.del_items.success.error=Batch Item Deletion
+staff.circ.copy_status.transfer_items.mark_destination=Please mark a volume as the destination and then try this again.
+staff.circ.copy_status.transfer_items.problem=All copies not likely transferred.
+staff.circ.copy_status.add_volumes.perm_failure=You don't have permission to add volumes to that library.
+staff.circ.copy_status.add_volumes.title=Add Volume/Item for Record # %1$s
+staff.circ.copy_status.edit_volumes.perm_failure=You don't have permission to edit this volume.
+staff.circ.copy_status.edit_volume.title=Volume for record # %1$s
+staff.circ.copy_status.edit_volumes.title=Volumes for record # %1$s
+staff.circ.copy_status.edit_volumes.duplicate=Edit failed:  You tried to change a volume's callnumber to one that is already in use for the given library.  You should transfer the items to the desired callnumber instead.
+staff.circ.copy_status.edit_volumes.success=Volumes modified.
+staff.circ.copy_status.delete_volumes.singular=Are you sure you would like to delete this volume?
+staff.circ.copy_status.delete_volumes.plural=Are you sure you would like to delete these volumes?
+staff.circ.copy_status.delete_volumes.title=Delete Volumes?
+staff.circ.copy_status.delete_volumes.delete=Delete
+staff.circ.copy_status.delete_volumes.cancel=Cancel
+staff.circ.copy_status.delete_volumes.override=Override Delete Failure?
+staff.circ.copy_status.delete_volumes.delete_copies=You must delete all the copies on the volume before you may delete the volume itself.
+staff.circ.copy_status.delete_volumes.success=Volumes deleted.
+staff.circ.copy_status.mark_volume.status=Volume marked as Item Transfer Destination
+staff.circ.copy_status.mark_volume.prompt=Choose just one Volume to mark as Item Transfer Destination
+staff.circ.copy_status.mark_volume.title=Limit Selection
+staff.circ.copy_status.ok=OK
+staff.circ.copy_status.mark_library=Library and Record marked as Volume Transfer Destination
+staff.circ.copy_status.mark_library.limit_one=Choose just one Library to mark as Volume Transfer Destination
+staff.circ.copy_status.mark_library.limit_one.title=Limit Selection
+staff.circ.copy_status.transfer_volume.none=Please mark a library as the destination from within holdings maintenance and then try this again.
+staff.circ.copy_status.transfer_volume.confirm=Transfer volumes %1$s to library %2$s on the following record?
+staff.circ.copy_status.transfer_volume.transfer.label=Transfer
+staff.circ.copy_status.transfer_volume.cancel.label=Cancel
+staff.circ.copy_status.transfer_volume.cancel.accesskey=C
+staff.circ.copy_status.transfer_volume.title=Volume Transfer
+staff.circ.copy_status.transfer_volume.aborted=Transfer Aborted
+staff.circ.copy_status.transfer_volume.override_failure=Override Volume Transfer Failure?
+staff.circ.copy_status.transfer_volume.cannot_have_vols=That destination cannot have volumes.
+staff.circ.copy_status.transfer_volume.success=Volumes transferred.
+staff.circ.copy_status.transfer_volume.error=All volumes not likely transferred.
+staff.circ.copy_status.test_barcode.prompt=Bad check digit, possibly due to a bad scan.  Use this barcode ("%1$s") anyway?
+staff.circ.copy_status.status.null_result=Something weird happened.  Result was null.
+staff.circ.copy_status.status.copy_not_found=%1$s was either mis-scanned or is not cataloged.
+staff.circ.copy_status.status.not_cataloged=Not Cataloged
+staff.circ.copy_status.status.pre_cat=Item is a pre-cataloged item.
+staff.circ.copy_status.status.hold=Item is captured for a Hold.
+staff.circ.copy_status.status.transit=Item is in Transit.
+staff.circ.copy_status.status.circ=Item is circulating.
