Mostly finish off server/circ i18n work

--- a/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
@@ -75,6 +75,7 @@ staff.circ.copy_details.not_transit=This item is not in transit.
 staff.circ.copy_details.user_details=%1$s, %2$s : %3$s
 staff.circ.copy_details.bad_hold_status=This item is not captured for a hold, however its status is incorrectly set to "On Holds Shelf".  Please check this item in to correct the status.
 staff.circ.copy_details.no_hold=This item is not captured for a hold.
+staff.circ.copy_status.tab_name=Item Status
 staff.circ.copy_status.action.complete=Action complete.
 staff.circ.copy_status.sel_checkin.error=Checkin did not likely happen.
 staff.circ.copy_status.cmd_replace_barcode.error=Barcode %1$s was not likely replaced.
@@ -132,3 +133,48 @@ staff.circ.copy_status.status.pre_cat=Item is a pre-cataloged item.
 staff.circ.copy_status.status.hold=Item is captured for a Hold.
 staff.circ.copy_status.status.transit=Item is in Transit.
 staff.circ.copy_status.status.circ=Item is circulating.
+staff.circ.hold_capture.print.to_printer=To Printer
+# pad this with whitespace to align with the rest of the staff.circ.hold_capture.print.* entries
+staff.circ.hold_capture.print.barcode= Barcode:
+# pad this with whitespace to align with the rest of the staff.circ.hold_capture.print.* entries
+staff.circ.hold_capture.print.title=   Title:
+# pad this with whitespace to align with the rest of the staff.circ.hold_capture.print.* entries
+staff.circ.hold_capture.print.author=  Author:
+# pad this with whitespace to align with the rest of the staff.circ.hold_capture.print.* entries
+staff.circ.hold_capture.print.route_to=Route to:
+# pad this with whitespace to align with the rest of the staff.circ.hold_capture.print.* entries
+staff.circ.hold_capture.print.patron=  Patron:
+staff.circ.hold_capture.calling_external=circ.hold_capture: Calling external .on_hold_capture()
+staff.circ.hold_capture.no_external=circ.hold_capture: No external .on_hold_capture()
+staff.circ.hold_capture.capture_failed=Could not capture hold.
+staff.circ.hold_capture.error=FIXME: need special alert and error handling
+staff.circ.in_house_use.tab_name=In-House Use
+staff.circ.in_house_use.barcode=Barcode:
+staff.circ.in_house_use.noncat_sort_error=error in noncat sorting:
+staff.circ.in_house_use.noncataloged=Non-Cataloged
+staff.circ.in_house_use.items_dump=items = 
+staff.circ.in_house_use.confirm_multiple=Are you sure you want to mark %1$s as having been used %2$s times?
+staff.circ.in_house_use.confirm_multiple.title=In-House Use Verification
+staff.circ.in_house_use.yes=Yes
+staff.circ.in_house_use.no=No
+# adjust Circulation -> Offline Interface to match your translation in lang.dtd
+staff.circ.in_house_use.failed.verbose=In House Use Failed.  If you wish to use the offline interface, in the top menubar select Circulation -> Offline Interface
+staff.circ.in_house_use.failed=In House Use Failed
+staff.circ.in_house_use.ok=OK
+staff.circ.in_house_use.external=circ.in_house_use: Calling external .on_in_house_use()
+staff.circ.in_house_use.no_external=circ.in_house_use: No external .on_in_house_use()
+staff.circ.in_house_use.on_failure.external=circ.in_house_use: Calling external .on_failure()
+staff.circ.in_house_use.on_failure.no_external=circ.in_house_use: No external .on_failure()
+staff.circ.print_list_template.window.title=Template Macros
+staff.circ.print_list_template.window.heading=General:
+staff.circ.print_list_template.window.template_type=For type: %1$s
+staff.circ.print_list_template.window.close=Close Window
+staff.circ.print_list_template.preview=preview: 
+staff.circ.print_list_template.save=Template Saved
+staff.circ.print_list_template.save_as=Save Templates File As
+staff.circ.print_list_template.export.error=Error exporting templates
+staff.circ.print_list_template.import=Import Templates File
+staff.circ.print_list_template.import_results=Imported these templates: %1$s
+staff.circ.print_list_template.reload=Please reload this interface.
+staff.circ.print_list_template.import.error=Error exporting templates
+staff.circ.print_list_template.tab_name=Receipt Template Editor
