--- a/Open-ILS/web/opac/locale/en-US/lang.dtd
+++ b/Open-ILS/web/opac/locale/en-US/lang.dtd
@@ -1604,3 +1604,45 @@
 <!ENTITY staff.chrome.menu_frame_overlay.tab8.accesskey "8">
 <!ENTITY staff.chrome.menu_frame_overlay.tab9.label "Tab 9">
 <!ENTITY staff.chrome.menu_frame_overlay.tab9.accesskey "9">
+<!ENTITY staff.circ.in_house_use.main.label "Record In-House Use">
+<!ENTITY staff.circ.in_house_use.cmgb1.caption "In-House Use">
+<!ENTITY staff.circ.in_house_use.multiplier_label.value "# of uses:">
+<!ENTITY staff.circ.in_house_use.multiplier_label.accesskey "u">
+<!ENTITY staff.circ.in_house_use.submit.label "Submit">
+<!ENTITY staff.circ.in_house_use.submit.accesskey "S">
+<!ENTITY staff.circ.in_house_use.print.label "Print List">
+<!ENTITY staff.circ.in_house_use.export.label "Export">
+<!ENTITY staff.circ.in_house_use.trim_list.label "Trim List (20 rows)">
+<!ENTITY staff.circ.in_house_use.strict_barcode.label "Strict Barcode">
+<!ENTITY staff.circ.in_house_use.sel_clip.label "Copy to Clipboard">
+<!ENTITY staff.circ.in_house_use.save_cols_btn.label "Save Columns">
+<!ENTITY staff.circ.pre_cat.window.title "Pre-Catalog Fields">
+<!ENTITY staff.circ.pre_cat.caption.label "Pre-Catalog Field Entry">
+<!ENTITY staff.circ.pre_cat.dummy_title.value "Title">
+<!ENTITY staff.circ.pre_cat.dummy_author.value "Author">
+<!ENTITY staff.circ.pre_cat.cancel.label "Cancel">
+<!ENTITY staff.circ.pre_cat.cancel.accesskey "C">
+<!ENTITY staff.circ.pre_cat.checkout.label "Checkout">
+<!ENTITY staff.circ.pre_cat.checkout.accesskey "o">
+<!ENTITY staff.circ.print_list.main.label "Templates">
+<!ENTITY staff.circ.print_list.top_ui.label "ID">
+<!ENTITY staff.circ.print_list.top_ui.name.label "Name">
+<!ENTITY staff.circ.print_list.top_ui.name.accesskey "N">
+<!ENTITY staff.circ.print_list.top_ui.type.label "Type">
+<!ENTITY staff.circ.print_list.top_ui.actions.label "Actions">
+<!ENTITY staff.circ.print_list.top_ui.preview.label "Preview">
+<!ENTITY staff.circ.print_list.top_ui.preview.accesskey "P">
+<!ENTITY staff.circ.print_list.top_ui.macros.label "Macros">
+<!ENTITY staff.circ.print_list.top_ui.macros.accesskey "M">
+<!ENTITY staff.circ.print_list.top_ui.default.label "Default">
+<!ENTITY staff.circ.print_list.top_ui.default.accesskey "D">
+<!ENTITY staff.circ.print_list.top_ui.save.label "Save Locally">
+<!ENTITY staff.circ.print_list.top_ui.save.accesskey "S">
+<!ENTITY staff.circ.print_list.top_ui.description "Be sure to 'Save Locally' before export">
+<!ENTITY staff.circ.print_list.top_ui.description.export.label "Export">
+<!ENTITY staff.circ.print_list.top_ui.description.export.accesskey "E">
+<!ENTITY staff.circ.print_list.top_ui.description.import.label "Import">
+<!ENTITY staff.circ.print_list.top_ui.description.import.accesskey "I">
+<!ENTITY staff.circ.print_list.header.label "Header">
+<!ENTITY staff.circ.print_list.line_item.label "Line Item">
+<!ENTITY staff.circ.print_list.footer.label "Footer">
