Start tackling circ/util.js i18n

--- a/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
@@ -178,3 +178,36 @@ staff.circ.print_list_template.import_results=Imported these templates: %1$s
 staff.circ.print_list_template.reload=Please reload this interface.
 staff.circ.print_list_template.import.error=Error exporting templates
 staff.circ.print_list_template.tab_name=Receipt Template Editor
+staff.circ.utils.abort_transits.confirm=Are you sure you would like to abort transits for copies: %1$s?
+staff.circ.utils.abort_transits.title=Aborting Transits
+staff.circ.utils.yes=Yes
+staff.circ.utils.no=No
+staff.circ.utils.abort_transits.not_allowed=Copy Id = %1$s
+staff.circ.utils.abort_transits.not_found=This item was no longer in transit at the time of the abort.  Perhaps this happened from a stale display?
+staff.circ.utils.abort_transits.unexpected_error=Transit not likely aborted.
+staff.circ.utils.retrieve_patron.failure=Problem retrieving patron.
+staff.circ.utils.retrieve_copy.failure=Problem retrieving copy details.
+staff.circ.utils.retrieve_circs.failure=Problem retrieving circulations.
+staff.circ.utils.offline.timestamp=Timestamp
+staff.circ.utils.offline.checkout_time=Check Out Time
+staff.circ.utils.offline.type=Transaction Type
+staff.circ.utils.offline.noncat=Non-Cataloged?
+staff.circ.utils.offline.noncat_type=Non-Cat Type ID
+staff.circ.utils.offline.count=Count
+staff.circ.utils.offline.patron_barcode=Patron Barcode
+staff.circ.utils.offline.item_barcode=Item Barcode
+staff.circ.utils.offline.due_date=Due Date
+staff.circ.utils.offline.backdate=Back Date
+staff.circ.utils.offline.use_time=Use Time
+staff.circ.utils.not_cataloged=Not Cataloged
+staff.circ.utils.owning_lib=Owning Library
+staff.circ.utils.loan_duration.short=Short
+staff.circ.utils.loan_duration.normal=Normal
+staff.circ.utils.loan_duration.long=Long
+staff.circ.utils.fine_level.low=Low
+staff.circ.utils.fine_level.normal=Normal
+staff.circ.utils.fine_level.high=High
+staff.circ.utils.circulate=Circulate?
+staff.circ.utils.deleted=Deleted?
+staff.circ.utils.holdable=Holdable?
+staff.circ.utils.opac_visible=OPAC Visible?
