Complete server/circ/util.js i18n (oh my aching fingers)

--- a/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
@@ -192,7 +192,7 @@ staff.circ.utils.offline.timestamp=Timestamp
 staff.circ.utils.offline.checkout_time=Check Out Time
 staff.circ.utils.offline.type=Transaction Type
 staff.circ.utils.offline.noncat=Non-Cataloged?
-staff.circ.utils.offline.noncat_type=Non-Cat Type ID
+staff.circ.utils.offline.noncat_type=Non-Cataloged Type ID
 staff.circ.utils.offline.count=Count
 staff.circ.utils.offline.patron_barcode=Patron Barcode
 staff.circ.utils.offline.item_barcode=Item Barcode
@@ -211,3 +211,101 @@ staff.circ.utils.circulate=Circulate?
 staff.circ.utils.deleted=Deleted?
 staff.circ.utils.holdable=Holdable?
 staff.circ.utils.opac_visible=OPAC Visible?
+staff.circ.utils.reference=Reference?
+staff.circ.utils.deposit=Deposit?
+# The < and > highlight that the value is not set; translate Unset and change the delimiters as needed
+staff.circ.utils.unset=<Unset>
+staff.circ.utils.checkout_lib=Checkout Library
+staff.circ.utils.checkout_timestamp=Checkout Timestamp
+staff.circ.utils.checkin_timestamp=Checkin Timestamp
+staff.circ.utils.xact_start=Checkout Date
+staff.circ.utils.checkin_time=Checkin Date
+staff.circ.utils.xact_finish=Transaction Finished
+staff.circ.utils.create_date=Date Created
+staff.circ.utils.edit_date=Date Last Edited 
+staff.circ.utils.edition=Edition
+staff.circ.utils.isbn=ISBN
+staff.circ.utils.pubdate=Publication Date
+staff.circ.utils.publisher=Publisher
+# TCN is an acronym for Title Control Number
+staff.circ.utils.tcn=TCN
+staff.circ.utils.stop_fines=Fines Stopped
+staff.circ.utils.stop_fines_time=Fines Stopped Time
+staff.circ.utils.route_to=Route To
+staff.circ.utils.message=Message
+staff.circ.utils.uses=# of Uses
+staff.circ.utils.alert_message=Alert Message
+staff.circ.utils.barcode=Barcode
+staff.circ.utils.title=Title
+staff.circ.utils.author=Author
+staff.circ.utils.callnumber=Call Number
+staff.circ.utils.transit_id=Transit ID
+staff.circ.utils.transit_source=Transit Source
+staff.circ.utils.transit_source_send_time=Transit Send Time
+staff.circ.utils.transit_dest=Transit Destination
+staff.circ.utils.transit_dest_recv_time=Transit Completion Time
+staff.circ.utils.transit_target_copy=Transit Copy ID
+staff.circ.utils.request_lib=Request Library (Full Name)
+staff.circ.utils.request_lib_shortname=Request Library
+staff.circ.utils.request_timestamp=Request Timestamp
+staff.circ.utils.request_time=Request Date
+# Time the hold became available
+staff.circ.utils.available_timestamp=Available On (Timestamp)
+# Date the hold became available
+staff.circ.utils.available_time=Available On
+# Time the hold was captured
+staff.circ.utils.capture_timestamp=Capture Timestamp
+# Date the hold was captured
+staff.circ.utils.capture_time=Capture Date
+staff.circ.utils.hold_status.1=Waiting for copy
+staff.circ.utils.hold_status.2=Waiting for capture
+staff.circ.utils.hold_status.3=In-Transit
+staff.circ.utils.hold_status.4=Ready for pickup
+staff.circ.utils.frozen=Frozen?
+staff.circ.utils.thaw_date=Thaw Date
+staff.circ.utils.thaw_date.none=No Date
+staff.circ.utils.pickup_lib=Pickup Library (Full Name)
+staff.circ.utils.current_copy.none=No Copy
+staff.circ.utils.title.none=No Title?
+staff.circ.utils.author.none=No Author?
+staff.circ.utils.notify_time=Last Notify Time
+staff.circ.utils.notify_count=Notices
+staff.circ.utils.patron_family_name=Patron Last Name
+staff.circ.utils.patron_first_given_name=Patron First Name
+staff.circ.utils.checkin.override=Override Checkin Failure?
+staff.circ.utils.billable.amount=Transaction for %1$s billable $%2$s
+staff.circ.utils.transit_hold_cancelled=Original hold for transit cancelled.
+staff.circ.utils.item_checked_in=%1$s was already checked in.
+staff.circ.utils.item_not_cataloged=ITEM_NOT_CATALOGED event but copy status is %1$s
+staff.circ.utils.route_to=This item needs to be routed to %1$s
+staff.circ.utils.route_item_error=We should have received a ROUTE_ITEM
+staff.circ.utils.route_item_status_error=status of Holds Shelf, but no actual hold found.
+staff.circ.utils.payload.hold.barcode=Barcode: %1$s
+staff.circ.utils.payload.hold.title=Title: %1$s
+# Hold for patron familyName, firstName secondName
+staff.circ.utils.payload.hold.patron=Hold for patron %1$s, %2$s %3$s
+staff.circ.utils.payload.hold.phone_notify=Notify by phone: %1$s
+staff.circ.utils.payload.hold.email_notify=Notify by email: %1$s
+staff.circ.utils.payload.hold.request_date=Request Date: %1$s
+staff.circ.utils.payload.hold.slip_date=Slip Date: %1$s
+staff.circ.utils.hold_slip=Hold Slip
+staff.circ.utils.hold_slip.print.yes=Print
+staff.circ.utils.hold_slip.print.no=Do Not Print
+staff.circ.utils.capture=%1$s has been captured for a hold.
+staff.circ.utils.needs_cataloging=%1$s needs to be cataloged.
+staff.circ.utils.copy_status.error=FIXME -- this case "%1$s" is unhandled.
+staff.circ.utils.msg.ok=OK
+staff.circ.utils.route_to.destination=Destination: %1$s.
+staff.circ.utils.route_to.no_address=We do not have a holds address for this library.
+staff.circ.utils.route_to.no_address.error=Unable to retrieve mailing address.
+staff.circ.utils.payload.author=Author: %1$s
+staff.circ.utils.payload.in_transit=%1$s is in transit.
+staff.circ.checkin.error=Check In Failed (in circ.util.checkin) (%1$s): 
+# "Circulation" - check &staff.main.menu.circ.label; in lang.dtd
+# "Offline Interface" - check &staff.main.menu.circ.offline.label; in lang.dtd
+staff.circ.checkin.suggest_offline=Check In Failed.  If you wish to use the offline interface, in the top menubar select Circulation -> Offline Interface
+staff.circ.checkin.renew_failed.error=Renew Failed for %1$s
+staff.circ.checkin.renew_failed.override=Override Renew Failure?
+staff.circ.renew.barcode=Barcode: %1$s
+staff.circ.renew.barcode.status=Barcode: %1$s Status: %2$s
+staff.circ.renew.barcode.msg=Barcode: %1$s Message: %2$s
