--- a/Open-ILS/xul/staff_client/server/locale/en-US/common.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/common.properties
@@ -1,5 +1,6 @@
 common.exception=!! This software has encountered an error.  Please tell your friendly system administrator or software developer the following:\n%1$s\n%2$s\n
 common.jsan.missing=The JSAN library object is missing.
+common.error=Please inform your helpdesk or developers of this error:
 common.ok=Ok
 common.clear=Clear
 common.confirm=Check here to confirm this message.
