i18n for the server/main and server/OpenILS directories

--- a/Open-ILS/xul/staff_client/server/locale/en-US/common.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/common.properties
@@ -84,3 +84,11 @@ staff.z39_50.search_class.publisher=Publisher
 staff.z39_50.search_class.tcn=Accession #
 staff.z39_50.search_class.title=Title
 staff.z39_50_import_interface_label=Z39.50 IMPORT
+staff.main.data.loaded=Data loaded.
+staff.main.gen_offline_widgets.synced=Offline interface synchronized with server.
+staff.main.gen_offline_widgets.noncat_sort.error=error in noncat sorting: 
+staff.main.gen_offline_widgets.please_wait=Please Wait
+staff.main.gen_offline_widgets.workstation_registration_denied=You do not have permission to register a workstation.
+staff.main.gen_offline_widgets.registration.override=Override Registration Failure?
+staff.main.gen_offline_widgets.registration.error=Workstation Registration error (%1$s)
+staff.main.gen_offline_widgets.registration.success=Registration successful
