--- a/Open-ILS/web/opac/locale/en-US/lang.dtd
+++ b/Open-ILS/web/opac/locale/en-US/lang.dtd
@@ -1646,3 +1646,8 @@
 <!ENTITY staff.circ.print_list.header.label "Header">
 <!ENTITY staff.circ.print_list.line_item.label "Line Item">
 <!ENTITY staff.circ.print_list.footer.label "Footer">
+<!ENTITY staff.main.data.loading "Loading data...">
+<!ENTITY staff.main.ws_info.entry "Enter a workstation name and library to register this client under:">
+<!ENTITY staff.main.ws_info.name "Name">
+<!ENTITY staff.main.ws_info.register_btn.label "Register">
+<!ENTITY staff.main.ws_info.register_btn.accesskey "R">
