bring a little sanity to blank tab labels

--- a/Open-ILS/xul/staff_client/chrome/locale/en-US/offline.properties
+++ b/Open-ILS/xul/staff_client/chrome/locale/en-US/offline.properties
@@ -120,8 +120,7 @@ menu.cmd_theme_manager.tab=Theme Manager
 menu.cmd_shutdown.prompt=Exit Evergreen completely?
 menu.spawn_search.msg=Editor would like to search for: %1$s
 menu.close_all_tabs.error=Error closing all tabs
-menu.close_tab.update_tab_label=Tab %1$s
-menu.new_tab.tab=Tab %1$s
+menu.new_tab.tab=Tab
 menu.set_tab.error=pause for error
 main.testing=Testing
 main.transaction_export.title=Save Transaction File As
