some i18n goodness and fixes.  And an extra column for patron lists, and including the last name for staff who collected a payment

--- a/Open-ILS/xul/staff_client/server/locale/en-US/common.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/common.properties
@@ -53,16 +53,72 @@ staff.bills_current_payment_label=Current Payment
 staff.mbts_id_label=Bill # 
 staff.mbts_xact_start_label=Start
 staff.mbts_xact_finish_label=Finish
+staff.mbts_xact_type_label=Type
 staff.mbts_total_owed_label=Total Billed
 staff.mbts_total_paid_label=Total Paid
 staff.mbts_balance_owed_label=Balance Owed
-staff.au_label_active=Active
-staff.au_label_id=Record ID
-staff.au_label_prefix=Prefix
-staff.au_label_family_name=Family Name
-staff.au_label_first_given_name=First Name
-staff.au_label_second_given_name=Middle Name
-staff.au_label_suffix=Suffix
+staff.mbts_usr_label=User
+staff.mbts_last_billing_note_label=Last Billing Note
+staff.mbts_last_billing_type_label=Last Billing Type
+staff.mbts_last_billing_timestamp_label=Last Billed
+staff.mbts_last_payment_note_label=Last Payment Note
+staff.mbts_last_payment_type_label=Last Payment Type
+staff.mbts_last_payment_timestamp_label=Last Payment
+staff.mb_billing_type_label=Billing Type
+staff.mb_xact_label=Transaction ID
+staff.mb_billing_ts_label=When
+staff.mb_void_time_label=Void Time
+staff.mb_note_label=Note
+staff.mb_amount_label=Amount
+staff.mb_voider_label=Voider
+staff.mb_voided_label=Voided
+staff.mb_id_label=Billing ID
+staff.mp_credit_card_payment_label=Credit Card Payment
+staff.mp_forgive_payment_label=Forgive Payment
+staff.mp_payment_timestamp_label=When
+staff.mp_payment_type_label=Payment Type
+staff.mp_voided_label=Voided
+staff.mp_id_label=Payment ID
+staff.mp_goods_payment_label=Goods Payment
+staff.mp_xact_label=Transaction ID
+staff.mp_credit_payment_label=Credit Payment
+staff.mp_work_payment_label=Work Payment
+staff.mp_note_label=Note
+staff.mp_cash_payment_label=Cash Payment
+staff.mp_amount_label=Amount
+staff.mp_check_payment_label=Check Payment
+staff.mp_cash_drawer_label=Workstation
+staff.mp_accepting_usr_label=Staff
+staff.card_barcode_label=Barcode
+staff.au_active_label=Active
+staff.au_usrname_label=Login Name
+staff.au_profile_label=Profile
+staff.au_barred_label=Barred
+staff.au_alert_message_label=Alert
+staff.au_claims_returned_count_label=Returns Claimed
+staff.au_create_date_label=Created On
+staff.au_expire_date_label=Expires On
+staff.au_home_library_label=Home Lib
+staff.au_home_library_fullname_label=Home Lib (Full Name)
+staff.au_credit_forward_balance_label=Credit
+staff.au_day_phone_label=Day Phone
+staff.au_evening_phone_label=Evening Phone
+staff.au_other_phone_label=Other Phone
+staff.au_email_label=Email
+staff.au_birth_date_label=Birth Date
+staff.au_ident_type_label=Ident Type
+staff.au_ident_value_label=Ident Value
+staff.au_ident_type2_label=Ident Type 2
+staff.au_ident_value2_label=Ident Value 2
+staff.au_net_access_level_label=Net Access
+staff.au_master_account_label=Group Lead
+staff.au_group_id_label=Group ID
+staff.au_id_label=User ID
+staff.au_name_prefix_label=Prefix
+staff.au_family_name_label=Family Name
+staff.au_first_given_name_label=First Name
+staff.au_second_given_name_label=Middle Name
+staff.au_name_suffix_label=Suffix
 staff.z39_50.search_class.author=Author
 staff.z39_50.search_class.isbn=ISBN
 staff.z39_50.search_class.issn=ISSN
