non-cat vs pre-cat labels.  Stop throwing an error dialog if a pre-cat checkout is cancelled

--- a/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
@@ -42,7 +42,8 @@ staff.circ.checkout.non_cataloged.pending=Non-cataloged checkout pending...
 staff.circ.checkout.barcode.pending=%1$s checkout pending...
 staff.circ.checkout.barcode.failed.alert=Check Out Failed %1$s
 staff.circ.checkout.override.confirm=Override Checkout Failure?
-staff.circ.checkout.not_cataloged.confirm=Mis-scan or non-cataloged item.  Checkout as a non-cataloged item?
+staff.circ.checkout.not_cataloged.confirm=Mis-scan or non-cataloged item.  Checkout as a pre-cataloged item?
+staff.circ.pre_cataloged=Pre-cataloged
 staff.circ.non_cataloged=Non-cataloged
 staff.circ.checkout.cancelled=Checkout cancelled
 staff.circ.checkout.card.inactive=The card used to retrieve this account is inactive and may not be used to circulate items.
