Hrmm, global_utils.js gets copied and shared between chrome and remote xul, so not sure what's the best thing to do here for the properties files.  Where do we want the redundancy?  Or can we get rid of it?

--- a/Open-ILS/xul/staff_client/server/locale/en-US/common.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/common.properties
@@ -13,6 +13,12 @@ common.barcode.status.warning.blocked=Blocked
 common.barcode.status.warning.unknown=with an unknown code: %1$s
 common.date.invalid=Invalid Date
 lang.version=remote v1
+openils.global_util.clear_cache.error=Problem clearing the cache: %1$s
+openils.global_util.clipboard.error=Clipboard action failed: %1$s
+openils.global_util.clipboard=Copied "%1$s" to clipboard.
+openils.global_util.content_window_jsobject.error=Error with get_contentWindow(%1$s) and wrappedJSObject: %2$s
+openils.global_util.content_window.error=Error with get_contentWindow(%1$s): %2$s
+openils.global_util.font_size.error=Error adjusting the font size: %1$s
 staff.acp_label_barcode=Barcode
 staff.acp_label_call_number=Call Number
 staff.acp_label_circ_as_type=Circ As Type
